variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:13: error: not found: value casOrange
    caseOrange = casOrange + 1
                 ^